# StockSavvyApp

./: .replit  ARCHITECTURE.md  App.tsx  Pasted--version-5-strategy-Multi-Strategy-Trading-System-overlay-true-Define-input-variables-gapA-1732418874065.txt  Pasted-Error-in-rf-model-Found-input-variables-with-inconsistent-numbers-of-samples-231-250-Error-in--1732488150901.txt  Pasted-Error-in-rf-model-Found-input-variables-with-inconsistent-numbers-of-samples-231-250-Error-in--1732488304934.txt  Pasted-Error-in-rf-model-Found-input-variables-with-inconsistent-numbers-of-samples-231-250-Error-in--1732488480887.txt  Pasted-Error-in-rf-model-Found-input-variables-with-inconsistent-numbers-of-samples-231-250-Error-in--1732488666164.txt  Pasted-No-secrets-found-Valid-paths-for-a-secrets-toml-file-or-secret-directories-are-home-runner-strea-1732415540787.txt  Pasted-import-pandas-as-pd-import-numpy-as-np-import-matplotlib-pyplot-as-plt-from-sklearn-preprocessing-im-1732485421871.txt  Pasted-ypeError-Unable-to-convert-function-return-value-to-a-Python-type-The-signature-was-handle-T-1734160487393.txt  README.md  app.json  index.js  main.py  metro.config.js  package-lock.json  package.json  pyproject.toml  replit.nix
.streamlit/: config.toml  secrets.toml
attached_assets/: Pasted--div-style-height-1px-background-color-1a2234-margin-1rem-0-div-div-style-display-gr-1744961321414.txt  Pasted-1-Day-Forecast-UP-div-div-class-progress-label-span-Confidence-span-sp-1744961350832.txt  Pasted-1-Day-Forecast-UP-div-div-class-progress-label-span-Confidence-span-sp-1744961649924.txt  (+5 more)
(+24 files in other folders)
