[project]
name = "repl-nix-stocksavvyapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pandas-ta>=0.3.14b0",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "streamlit>=1.40.1",
    "yfinance>=0.2.50",
    "statsmodels>=0.14.4",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.3",
    "tensorflow",
    "keras",
    "textblob",
    "python-dateutil",
]
